// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when two integer properties in different DEs have the same name should have validation failures for each entity 1`] = `"Integer Property named PropertyName is a duplicate declaration of that name."`;

exports[`when two integer properties in different DEs have the same name should have validation failures for each entity 2`] = `
Object {
  "column": 12,
  "line": 5,
  "tokenText": "PropertyName",
}
`;

exports[`when two integer properties in different DEs have the same name should have validation failures for each entity 3`] = `"Integer Property named PropertyName is a duplicate declaration of that name."`;

exports[`when two integer properties in different DEs have the same name should have validation failures for each entity 4`] = `
Object {
  "column": 12,
  "line": 14,
  "tokenText": "PropertyName",
}
`;
